Fixed spacing on Confirmation Save the Date page

--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,17 @@
   font-size: 1.8rem;
 }
 
+#confirmation-title {
+ margin-left: 30px;
+ margin-right: 30px;
+ padding-top: 200px;
+}
+
+#confirmation-text {
+  padding-top: 30px;
+  padding-bottom: 250px;
+}
+
 #title-sd {
   font-style: oblique;
   font-weight: 350;
